--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1452,107 +1452,107 @@ stories:
   domain: http://www.louisville.com/voice.html
   link: https://www.louisville.com/2nd-and-Ali/ep-4-we-love-daily-grind
 images:
-- name: cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
-- name: server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-dark-dali.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-space-pizza.JPG
-- name: copper-circuit-sailboat-in-front-of-housing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sailboat-in-front-of-housing.jpg
-- name: border-crossing-bordercrossing-post-modern.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-post-modern.png
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
-- name: miamibeach-miamibeach-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-plentiful.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-sunday.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sunday.JPG
-- name: flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
-- name: windowmountain-window-mountain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-marcel-duchamp.jpg
-- name: christianity-christianity-under-construction-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gred-mash.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-- name: gears-4882162452-fa3126b38d-b-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-plentiful.jpg
-- name: status-berlin-status-berlin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-matrix.jpg
-- name: old-school-house-old-schoolhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-soul.jpg
-- name: mistywoods-babyfoot-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colorful-dream.jpg
-- name: containership-containership-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-marcel-duchamp.jpg
-- name: subway-subway-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colored-circuits.jpg
-- name: rain-princess-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7831.jpg
-- name: downtheline-downtheline-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-ww2-dresden.jpg
-- name: border-fence-border-fence-on-hill-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-rain.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-brush.png
-- name: braceros-domingo-ulloa-old-comuter-wheels-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-comuter-wheels-crypto.jpg
-- name: rain-princess-IMG_8358.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8358.jpg
-- name: carry-load-carryload-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-matrix.jpg
-- name: supreme-court-supremecourt-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
-- name: cargo-ship-cargo-ship-on-sea-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kand-two.jpg
-- name: downtown-la.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la.JPG
-- name: braceros-domingo-ulloa-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-coming-up-tracks.jpg
-- name: walled-garden-walled-garden-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crabapple.jpg
-- name: old-door-lock-old-door-lock-2-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-hot-spicy.jpg
-- name: curtain-curtain-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-dresden.jpg
-- name: abandonedbuildings_ww2_color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_color.jpg
-- name: status-berlin-status-berlin-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-creativity.jpg
-- name: old-gas-pumps-oldgaspumps-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-spagetti-accident.jpg
-- name: art-museum-art-museum-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-sand-paper.jpg
-- name: blossombar-purple-storm-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
-- name: beach-rocks-beach-rocks-currents-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-mucha-mult.jpg
-- name: fence-bw-fist.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist.png
-- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-- name: mistywoods-babyfoot-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-circuit.jpg
-- name: gears-4882162452-fa3126b38d-b-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
-- name: aws-s3-smithriver-smithriver-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
-- name: copper-circuit-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cargo-ship_36587814601_o.jpg
-- name: adam-smith-adam-smith-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-5.jpg
-- name: flower-barbed-wire-flower-barbed-wire-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-sunday.jpg
-- name: razorwire-DSC-0080-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-really-hot.jpg
-- name: aws-s3-stories-containership-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
-- name: rockingchair-rockingchair-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-sunday.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
+- name: rain-princess-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
+- name: bluelake-oily-mcoilface-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-38-67.jpg
+- name: oldroad-old-road-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gred-mash.jpg
+- name: ellis-island-ellisisland-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
+- name: birdhouse-birdhouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-rain.jpg
+- name: aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
+- name: machine-road-machine-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-umberto-bocc.jpg
+- name: flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+- name: gears-4882162452-fa3126b38d-b-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-hot-spicy.jpg
+- name: power-lines-power-lines-empty-space-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alberto-giacometti.jpg
+- name: stories-gears-numbers-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-numbers-blue.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-3.jpg
+- name: art-museum-art-museum-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-mucha-mult.jpg
+- name: oldcabin-store-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-bright-sand.jpg
+- name: store-on-corner-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-pablo-blue.jpg
+- name: rain-princess-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-close-to-all-remote-aircraft.jpg
+- name: carry-load-carryload-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-alien-goggles.jpg
+- name: christianity-christianity-under-construction-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crafty-painting.jpg
+- name: legal-statue-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
+- name: copper-circuit-statue-face-looking-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-face-looking-up.jpg
+- name: braceros-domingo-ulloa-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-destruction-seattle-viaduct.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+- name: downtown-trucksilo-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-ww2-color.jpg
+- name: flower-barbed-wire-flower-barbed-wire-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kand-two.jpg
+- name: crow_plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_plentiful.jpg
+- name: stalin-time-old-piano-paris-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-piano-paris-hospital.jpg
+- name: amusement-park-amusement-park-2-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-wols.jpg
+- name: blossombar-smooth-ride-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-24-99.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+- name: copper-circuit-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-on-railroad-2.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-kandinsky-bv.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kandinsky-bv.png
+- name: carry-load-carryload-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-oily-mcoilface.jpg
+- name: braceros-domingo-ulloa-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-construction-crane-city.jpg
+- name: old-church-oldchurch-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-constitution.jpg
+- name: cargo-ship-cargo-ship-on-sea-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-satan-red.jpg
+- name: oldbarn-oldbarn-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purp-paper.jpg
+- name: blossombar-crafty-painting-file-00-00-50-28.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-28.jpg
+- name: oldtrain-oldtrain-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-smoking-cigarette.jpg
+- name: berlinwall2-berlinwall-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-three.jpg
+- name: statue-of-liberty-front-view-statueofliberty-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-far-away.jpg
+- name: hollywood-building-hollywood-building-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-graham-sutherland.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-brush.jpg
+- name: old-cabin-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alien-goggles.jpg
+- name: oldroad-old-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
+- name: abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
+- name: border-fence-border-fence-on-hill-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-light-dali.jpg
+- name: razorcliff-razorcliff-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-dresden.jpg
+- name: blossombar-green-zuma-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-50-62.jpg
+- name: copper-circuit-whie-house-close-up-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-whie-house-close-up-2.jpg
 ---
 Wreaths Placed At Sappington Cemetery.&nbsp;County Backs Community Service Foundation.&nbsp;Christmas Dinner For The Needy.&nbsp;Shark Reportedly Bites Surfer Off Southern California Coast.&nbsp;Detienen A Implicado En Tiroteo En Chicago.&nbsp;Gladwin Varsity Basketball Falls To Defending Champs.&nbsp;Come Back Safely, Ya Hear?.&nbsp;County Receives clean Audit With No Material Weaknesses.&nbsp;
